--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,10 @@
   {# Display django.contrib.messages as Bootstrap alerts #}
   {% bootstrap_messages %}
 
+  {% block extrahead %}
+    {# Load Extra CSS and JavaScript #}
+  {% endblock %}
+
 </head>
 
 <body>
