--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,25 +1,49 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
-{% load bootstrap4 %}
+{% load widget_tweaks %}
 
-{% block title %}{% trans "Log inss" %}{% endblock %}
+{% block title %}{% trans "Log in" %}{% endblock %}
 
 {% block container %}
-<form method="post" action="">
+<form method="post" action="" class="form-vertical">
+    <div class="module-head">
+        <h3>{% trans 'Sign in' %}</h3>
+    </div>
     {% csrf_token %}
-    {% bootstrap_form form %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">{% trans 'Sign in' %}</button>
-    {% endbuttons %}
+   
+    <div class="module-body">
+        <div class="control-group">
+            <div class="controls row-fluid">
+                 {% render_field form.username placeholder=form.username.label data-toggle="tooltip" title=form.username.help_text class+="span12" %}
+                 {{ form.username.errors }}
+            </div>
+        </div>
+        <div class="control-group">
+            <div class="controls row-fluid">
+                {% render_field form.password placeholder=form.password.label  class+="span12" %}
+                {{ form.password.errors }}
+            </div>
+        </div>
+    </div>
+
+    <div class="module-foot">
+        <div class="control-group">
+            <div class="controls clearfix">
+                <button type="submit" class="btn btn-primary pull-right">Login</button>
+                <label class="checkbox">
+                    <input type="checkbox"> Remember me
+                </label>
+            </div>
+        </div>
+    </div>
     <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-<p>{% trans "Forgot your password?" %} <a href="{% url 'auth_password_reset' %}">{% trans "Reset it" %}</a>.</p>
-<p>{% trans "Not a member?" %} <a href="{% url 'registration_register' %}">{% trans "Register" %}</a>.</p>
 {% endblock %}
 
 
 {% comment %}
+
 **registration/login.html**
 
 It's your responsibility to provide the login form in a template called
