--- a/master/templates/master/online_player/index.html
+++ b/master/templates/master/online_player/index.html
@@ -50,7 +50,7 @@
       <!-- Navigation -->
       <nav class="navbar">
         <div class="container">   
-            <a class="navbar-brand" href="{% url 'master:home' %}">Betting</a>
+            <a class="navbar-brand" href="{% url 'users:home' %}">Betting</a>
             {% block main_navigation %}
               <div >
                 {% block navigation %}{# add dynamic navigation #}{% endblock navigation %}
