--- a/master/viewsets/onlineplayer/templates/onlineplayer/home.html
+++ b/master/viewsets/onlineplayer/templates/onlineplayer/home.html
@@ -1,8 +1,8 @@
-{% extends "master/onlineplayer/base.html" %}
+{% extends "onlineplayer/base.html" %}
 {% load static %}
 {% load i18n %}
 
 {% block nav %}
-	<a class="btn btn-primary" href="#">credit: 50 </a>
+	<a class="btn btn-primary" href="#" title="click for bank details">credit: {{object.balance}} </a>
 	{{block.super}}
 {% endblock %}
