celery added with graphile corrections

--- a/master/viewsets/onlineplayer/templates/onlineplayer/registration/registration_form.html
+++ b/master/viewsets/onlineplayer/templates/onlineplayer/registration/registration_form.html
@@ -1,6 +1,7 @@
 {% extends "registration/registration_base.html" %}
 {% load i18n %}
 {% load bootstrap4 %}
+{% load widget_tweaks %}
 
 {% block title %}{% trans "Register for an account" %}{% endblock %}
 
